recursion.logo.lessons.recursion.logo.polygonfractal.PolygonFractal.scala.error
PolygonFractal:8: error: not found: value droit
      droit(angle)
      ^